fking tests pas both with pytest and when run by script. thanks python for your module system

--- a/rakefile
+++ b/rakefile
@@ -23,6 +23,7 @@ def shell(cmd)
 end
 
 task :clean do
-    shell "rm -rf .pytest_cache"
+    # shell "rm -rf .pytest_cache"
+    shell "find . -name .pytest_cache -type d -exec rm -rvf  \{\} \\;"
     shell "find . -name __pycache__ -type d -exec rm -rvf  \{\} \\;"
 end
