better constructor injection of caching

--- a/rakefile
+++ b/rakefile
@@ -1,8 +1,8 @@
 task :default => :run do
 end
 
-task :run do |t|
-    shell 'uvicorn src.simile.restapi:app  --port 11111  --reload'
+task :serve do |t|
+    shell 'cd src/simile && uvicorn restapi:app  --reload'
 end
 
 task :unittest do |t|
